--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,5 +50,13 @@
         android:text="Customize"
         android:paddingTop="10dp"/>
 
+    <Button
+        android:id="@+id/btn_view_readings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Readings"
+        android:layout_marginTop="20dp"/>
+
+
 </LinearLayout>
 
