--- a/app/src/main/res/layout/list_item_reading.xml
+++ b/app/src/main/res/layout/list_item_reading.xml
@@ -30,4 +30,10 @@
         android:id="@+id/txt_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete" />
 </LinearLayout>
